# compute-tycoon

./: .gitignore  AGENTS.md  CONTEXT.md  CONTRIBUTING.md  README.md  hardware.py  main.py  pyproject.toml  requirements-dev.txt
.codex/: config.toml
.codex/agents/: architect.toml  engineer.toml  explorer.toml  qa.toml  risk-reviewer.toml  test-engineer.toml
docs/: README.md  cli_network_design.md  static_testing.md
docs/adr/: 0001-catalog-driven-node-assembly.md  0002-immutable-network-topology.md  0003-role-based-execution.md  0004-versioned-autosave.md  0005-transactional-save-load.md  0006-node-role-change-synchronization.md  0007-application-server-synchronous-delegation.md  0008-multilingual-cli-help.md  README.md
docs/agents/: domain.md  git-branches.md  issue-tracker.md  triage-labels.md
docs/architecture/: overview.md
docs/design/: domain-model.md  networking.md  workload-execution.md
docs/development/: quality.md  (+1 more)
hardware_sim/: __init__.py  assembly.py  catalog.py  config.py  config_paths.py  errors.py  events.py  executors.py  game.py  infrastructure.py  localization.py  module.py  monitor.py  networking.py  node.py  parts.py  persistence.py  shell.py  snapshots.py  work.py  workloads.py
scripts/: run_static_tests.py
tests/: test_assembly_inventory_contract.py  test_cli_help_contract.py  test_entrypoint_contract.py  test_game_network_workload_contract.py  test_networking_contract.py  test_node_lifecycle_contract.py  test_persistence_contract.py  test_public_api_contract.py  test_shell_monitor_contract.py  test_workload_catalog_contract.py
(+11 files in other folders)
